<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintWidth_max="@dimen/keyboard_width"
    android:maxHeight="600dp"
    android:layout_gravity="center"
    tools:context=".KeyboardActivity">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_guide_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/display_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/display_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/aed"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:textSize="@dimen/keyboard_display_view" />

            <TextView
                android:id="@+id/display_whole_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/_0"
                android:maxLength="19"
                android:textSize="@dimen/keyboard_display_view" />

            <TextView
                android:id="@+id/display_decimal_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/_decimal"
                android:textSize="@dimen/keyboard_display_view" />

            <TextView
                android:id="@+id/display_fractional_value_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/_0"
                android:textSize="@dimen/keyboard_display_view" />

            <TextView
                android:id="@+id/display_fractional_value_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/_0"
                android:textSize="@dimen/keyboard_display_view" />
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guide_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/keypad_layout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        app:layout_constraintWidth_min="@dimen/keyboard_width"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_guide_1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_1"
            style="@style/KeyboardButton"
            android:text="@string/_1"
            app:layout_constraintBottom_toTopOf="@+id/horizontal_guide_2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/button_2"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_2"
            style="@style/KeyboardButton"
            android:text="@string/_2"
            app:layout_constraintBottom_toBottomOf="@+id/button_1"
            app:layout_constraintLeft_toRightOf="@+id/button_1"
            app:layout_constraintRight_toLeftOf="@id/button_3"
            app:layout_constraintTop_toTopOf="@+id/button_1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_3"
            style="@style/KeyboardButton"
            android:text="@string/_3"
            app:layout_constraintBottom_toBottomOf="@+id/button_2"
            app:layout_constraintLeft_toRightOf="@id/button_2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guide_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_4"
            style="@style/KeyboardButton"
            android:text="@string/_4"
            app:layout_constraintBottom_toTopOf="@+id/horizontal_guide_3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/button_5"
            app:layout_constraintTop_toBottomOf="@+id/horizontal_guide_2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_5"
            style="@style/KeyboardButton"
            android:text="@string/_5"
            app:layout_constraintBottom_toBottomOf="@+id/button_4"
            app:layout_constraintLeft_toRightOf="@+id/button_4"
            app:layout_constraintRight_toLeftOf="@id/button_6"
            app:layout_constraintTop_toTopOf="@+id/button_4" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_6"
            style="@style/KeyboardButton"
            android:text="@string/_6"
            app:layout_constraintBottom_toBottomOf="@+id/button_5"
            app:layout_constraintLeft_toRightOf="@id/button_5"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guide_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.50" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_7"
            style="@style/KeyboardButton"
            android:text="@string/_7"
            app:layout_constraintBottom_toTopOf="@+id/horizontal_guide_4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/button_8"
            app:layout_constraintTop_toBottomOf="@+id/horizontal_guide_3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_8"
            style="@style/KeyboardButton"
            android:text="@string/_8"
            app:layout_constraintBottom_toBottomOf="@+id/button_7"
            app:layout_constraintLeft_toRightOf="@+id/button_7"
            app:layout_constraintRight_toLeftOf="@id/button_9"
            app:layout_constraintTop_toTopOf="@+id/button_7" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_9"
            style="@style/KeyboardButton"
            android:text="@string/_9"
            app:layout_constraintBottom_toBottomOf="@+id/button_8"
            app:layout_constraintLeft_toRightOf="@id/button_8"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guide_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_decimal"
            style="@style/KeyboardButton"
            android:text="@string/_decimal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/button_0"
            app:layout_constraintTop_toBottomOf="@+id/horizontal_guide_4" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_0"
            style="@style/KeyboardButton"
            android:text="@string/_0"
            app:layout_constraintBottom_toBottomOf="@+id/button_decimal"
            app:layout_constraintLeft_toRightOf="@+id/button_decimal"
            app:layout_constraintRight_toLeftOf="@id/button_delete"
            app:layout_constraintTop_toTopOf="@+id/button_decimal" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/button_delete"
            style="@style/KeyboardButton"
            android:contentDescription="@string/delete_button"
            android:src="@drawable/ic_baseline_backspace_24"
            app:layout_constraintBottom_toBottomOf="@+id/button_0"
            app:layout_constraintLeft_toRightOf="@id/button_0"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>