<resources>
    <string name="app_name">Mamo Keyboard</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_decimal">.</string>
    <string name="_0">0</string>
    <string name="delete_button">Delete button</string>
    <string name="aed">AED</string>
    <string name="_00">00</string>
</resources>